# grillgauge

./: .ahoy.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.ahoy/: docker.ahoy.yml  provision.ahoy.yml
.docker/test-arm64/: Dockerfile
.docs/: architecture.py
.github/workflows/: ci.yml
ansible/: ansible.cfg
ansible/inventory/: docker.ini  hosts.ini  production.ini.template
ansible/playbooks/: site.yml
ansible/roles/bluetooth/handlers/: main.yml
ansible/roles/bluetooth/tasks/: main.yml
ansible/roles/bluetooth/vars/: main.yml
ansible/roles/grafatui/handlers/: main.yml
ansible/roles/grafatui/tasks/: main.yml
ansible/roles/grafatui/templates/: config.yml.j2
ansible/roles/grillgauge/defaults/: main.yml
ansible/roles/grillgauge/handlers/: main.yml
ansible/roles/grillgauge/tasks/: main.yml
ansible/roles/grillgauge/templates/: attach-dashboard.sh.j2  bluetooth-agent.service.j2  dashboard.service.j2  grillgauge-dashboard.sh.j2  grillgauge-scan.service.j2  grillgauge-scan.timer.j2  grillgauge.env.j2  grillgauge.service.j2  start-dashboard.sh.j2
ansible/roles/grillgauge/vars/: main.yml
ansible/roles/process-exporter/handlers/: main.yml
ansible/roles/process-exporter/tasks/: main.yml
ansible/roles/process-exporter/templates/: process-exporter.yml.j2
ansible/roles/prometheus/tasks/: main.yml
ansible/roles/prometheus/templates/: prometheus.yml.j2
ansible/roles/sampler/handlers/: main.yml
ansible/roles/sampler/tasks/: main.yml
ansible/roles/sampler/templates/: fetch-service-stats.sh.j2  fetch-weather.sh.j2  grillgauge.yml.j2  wrapper.sh.j2
ansible/roles/sampler/vars/: main.yml
ansible/roles/system/handlers/: main.yml
ansible/roles/system/tasks/: main.yml
ansible/roles/system/templates/: autologin.conf.j2
ansible/roles/system/vars/: main.yml
src/grillgauge/: cli.py  config.py  env.py  generator.py  metrics.py  probe.py  scanner.py  server.py
src/grillgauge/agent/: __init__.py  __main__.py  agent.py
src/grillgauge/dashboard/: __init__.py  app.py  config.py
src/grillgauge/dashboard/data/: __init__.py  probes.py  (+3 more)
tests/: test_agent.py  test_cli.py  test_env.py  test_import.py  test_metrics.py  test_probe.py  test_scanner.py  test_server.py
tests/dashboard/: test_app.py  test_config.py  test_probes.py  test_weather.py
tests/dashboard/data/: __init__.py  test_probes.py  test_prometheus.py  test_services.py
tests/dashboard/renderables/: test_zero_baseline_sparkline.py
tests/dashboard/widgets/: __init__.py  test_services.py  test_temperature.py  test_weather.py
(+8 files in other folders)
