[tool.poetry]
name = "grillgauge"
version = "0.1.0"
description = "A CLI tool for grillgauge"
authors = ["Teo Sibileau <teo@example.com>"]
readme = "README.md"
packages = [
    { include = "grillgauge", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.1"
click = "^8.3.0"
bleak = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"

[tool.poetry.scripts]
grillgauge = "grillgauge.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["E501", "PLR0913", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"