[tool.poetry]
name = "grillgauge"
version = "0.1.0"
description = "A CLI tool for grillgauge"
authors = ["Teo Sibileau <teo@example.com>"]
readme = "README.md"
packages = [
    { include = "grillgauge", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.2.1"
click = "^8.3.0"
bleak = "^2.1.1"
prometheus-client = "^0.23.1"
coloredlogs = "^15.0.1"
aiohttp = "^3.13.3"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
ipdb = "^0.13.13"
pytest-asyncio = "^1.3.0"
ipython = "^9.9.0"


[tool.poetry.group.dashboard.dependencies]
textual = "^7.4.0"
httpx = "^0.28.1"


[tool.poetry.group.docs.dependencies]
diagrams = "^0.25.1"

[tool.poetry.scripts]
grillgauge = "grillgauge.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["E501", "PLR0913", "ARG002", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
